# salla-analytics

./: .gitignore  AGGREGATION_BUTTON_FIX.md  APP_TESTING_REPORT.md  BUGS_FIXED.md  BUSINESS_EXPLAINED_REPORT.xlsx  BUSINESS_METRICS_EXPLAINED.txt  CHANGELOG.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CRITICAL_FIX_SESSION_STATE.md  CRITICAL_UX_FIXES.md  DATA_QUALITY_FIX.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DYNAMIC_MAPPER_PLAN.md  Dockerfile  Dockerfile.backup  ECOMMERCE_DASHBOARD_FIX.md  EXPORT_FIX_COMPLETE.md  GERMANY_DATA_SUCCESS.md  IMPROVEMENTS_MADE.md  IMPROVEMENT_ROADMAP.md  LOCAL_TESTING_CHECKLIST.md  MAPPER_VALIDATION_FIX.md  MOBILE_GUIDE.md  Makefile  PLATFORM_FLEXIBILITY_IMPROVEMENTS.md  PRE_DEPLOYMENT_CHECKLIST.md  PRIORITY_1_COMPLETE.md  PROJECT_READY.md  QUICKSTART.md  README.md  SALLA_INTEGRATION_PLAN.md  SESSION_STATE_INVESTIGATION.md  UI_COMPONENT_REFERENCE.md  UI_REDESIGN_STATUS.md  UI_TESTING_CHECKLIST.md  UI_UX_IMPROVEMENTS.md  USER_GUIDE.md  VERCEL_NOTE.txt  WEEKLY_ACTION_CHECKLIST.txt  (+24 more)
.streamlit/: config.toml
app/: __init__.py  config.py  main.py
app/analytics/: __init__.py  anomalies.py  cohorts.py  explainers.py  financial_insights.py  geo.py  kpis.py  products.py  rfm.py
app/export/: __init__.py  workbook.py
app/i18n/: ar.json  en.json
app/ingestion/: __init__.py  aggregator.py  mapper.py  reader.py  schema_registry.py  validators.py
app/schemas/: canonical_schema.yaml  header_synonyms.yaml  schema_registry.json
app/ui/: __init__.py  charts.py  components.py  theme.py
app/ui/pages/: actions.py  cohorts.py  customers.py  geo_analytics.py  insights.py  products.py  summary.py  upload.py
app/utils/: mobile.py
data/: generate_sample_data.py
tests/: test_analytics.py
